EoCart New Version 1.0.0 Updated 09/10/2021

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,6 @@
     <string name="supporting_text">supporting_text</string>
     <string name="action">Action</string>
     <string name="action_2">Action 2</string>
+    <string name="product_image">Product_Image</string>
+
 </resources>
