EoCart New Version 1.0.0 Updated 15/10/2021

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,5 +43,7 @@
     <string name="categories">Categories</string>
     <string name="explore">Explore</string>
     <string name="profile_bottom">Profile</string>
+    <string name="top_selling_products">Top Selling Products</string>
+    <string name="splashimage">splashImage</string>
 
 </resources>
